--- a/scene.html
+++ b/scene.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Scene</title>
     <link rel='stylesheet' href='css/base.css'>
+    <script type="text/javascript"  src="js/jquery-1.10.2.min.js"></script>
+    <script src="js/cookie.js"></script>
+    <script src="js/book.js"></script>
+    <script src="js/connect_web.js"></script>
 </head>
 <body id="wrap">
   <header>
@@ -50,6 +54,7 @@
                 <li class="cost2">网购价</li>
                 <li class="cost2">数量</li>
             </ul>
+            <!--
             <ul class="sceneDMsg">
                 <li class="type"><a href="">欢乐世界</a></li>
                 <li class="explation">需提前1天的22:15之前可购买</li>
@@ -84,74 +89,15 @@
                 <li class="cost1">￥0.00</li>
                 <li class="cost2 red">￥0.00</li>
                 <li class="cost2">
-                    <a href="" class="sub">-</a>
+                    <a href="javascript:void(0)" class="sub">-</a>
                     <input type="text" value="1" class="numbers">
-                    <a href="" class="add">+</a>
+                    <a href="javascript:void(0)" class="add">+</a>
                 </li>
                 <li class="buy">
                     <button value="">购买</button>
                 </li>
             </ul>
-        </div>
-        <div class="sceneitems">
-            <div class="sceneTitle">
-                <img src="images/suzhou.jpg">
-                <div class="introduction">
-                    <h2>苏州乐园<label><江苏,苏州></label></h2>
-                    <label>特殊说明</label>
-                    <p>江苏省苏州市新区玉山路156号</p>
-                    <b>开园时间:9:00-17:00</b>
-                </div>
-            </div>
-            <ul class="sceneMsg">
-                <li class="type">景区类型</li>
-                <li class="explation">购买说明</li>
-                <li class="cost1">门市价</li>
-                <li class="cost2">网购价</li>
-                <li class="cost2">数量</li>
-            </ul>
-            <ul class="sceneDMsg">
-                <li class="type"><a href="">欢乐世界</a></li>
-                <li class="explation">需提前1天的22:15之前可购买</li>
-                <li class="cost1">￥0.00</li>
-                <li class="cost2 red">￥0.00</li>
-                <li class="cost2">
-                    <a href="" class="sub">-</a>
-                    <input type="text" value="1" class="numbers">
-                    <a href="" class="add">+</a>
-                </li>
-                <li class="buy">
-                    <button value="">购买</button>
-                </li>
-            </ul>
-            <ul class="sceneDMsg">
-                <li class="type"><a href="">欢乐世界</a></li>
-                <li class="explation">需提前1天的22:15之前可购买</li>
-                <li class="cost1">￥0.00</li>
-                <li class="cost2 red">￥0.00</li>
-                <li class="cost2">
-                    <a href="" class="sub">-</a>
-                    <input type="text" value="1" class="numbers">
-                    <a href="" class="add">+</a>
-                </li>
-                <li class="buy">
-                    <button value="">购买</button>
-                </li>
-            </ul>
-            <ul class="sceneDMsg">
-                <li class="type"><a href="">欢乐世界</a></li>
-                <li class="explation">需提前1天的22:15之前可购买</li>
-                <li class="cost1">￥0.00</li>
-                <li class="cost2 red">￥0.00</li>
-                <li class="cost2">
-                    <a href="" class="sub">-</a>
-                    <input type="text" value="1" class="numbers">
-                    <a href="" class="add">+</a>
-                </li>
-                <li class="buy">
-                    <button value="">购买</button>
-                </li>
-            </ul>
+            -->
         </div>
     </div>
     <div  class="link_page clear">
