--- a/login.html
+++ b/login.html
@@ -7,7 +7,8 @@
     <meta http-equiv="description" content="">
     <link rel="stylesheet"	 href="css/base.css" />
     <script type="text/javascript"  src="js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript"  src="js/base.js"></script>
+    <script src="js/Load.js"></script>
+    <script src="js/cookie.js"></script>
   </head>
   <body id="public_lg">
      <div  class="log_re" >
@@ -32,4 +33,5 @@
         </form>
     </div>
 </body>
+  <script src="js/base.js"></script>
 </html>
