--- a/order.html
+++ b/order.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>order</title>
     <link rel='stylesheet' href='css/base.css'>
+    <script type="text/javascript"  src="js/jquery-1.10.2.min.js"></script>
+
 </head>
 <body id="wrap">
    <header>
@@ -100,19 +102,19 @@
                        <li class="name1">
                          <span>
                             <input type="checkbox" class="idButton">
-                            <a href="" class="allId">订单号</a>
+                            <a href="" class="allId">电子门票</a>
                          </span>
                        </li>
-                       <li class="name2">下单时间</li>
-                       <li class="name3">景区名称</li>
+                       <li class="name3">用户操作信息</li>
                        <li class="name2">订单状态</li>
                        <li class="name1">游玩人</li>
-                       <li class="name2">游玩时间</li>
-                       <li class="name4">票数</li>
-                       <li class="name4">订单金额</li>
+                       <li class="name2">总票数</li>
+                       <li class="name4">剩余票数</li>
                        <li class="name5">操作</li>
                    </ul>
                </div>
+               
+               <!--
                <div class="order clear">
                    <ul class="items">
                        <li class="name1">
@@ -127,7 +129,7 @@
                        <li class="name1">
                            <em>刘红</em>
                            <br>
-                           <em>18292864770</em>
+                           <em>18200000000</em>
                        </li>
                        <li class="name2">2015-07-05</li>
                        <li class="name4">3</li>
@@ -138,58 +140,8 @@
                        </li>
                    </ul>
                </div>
-               <div class="order clear">
-                   <ul class="items">
-                       <li class="name1">
-                         <span>
-                            <input type="checkbox">
-                            <a href="" class="singleId">3601912839</a>
-                         </span>
-                       </li>
-                       <li class="name2">2015-07-04 22:12:08</li>
-                       <li class="name3 blue">曲江海洋极地公园成人票【预订2小时后刷二维码入园，一个手机号最多预定3张】</li>
-                       <li class="name2 green">订单完成</li>
-                       <li class="name1">
-                           <em>刘红</em>
-                           <br>
-                           <em>18292864770</em>
-                       </li>
-                       <li class="name2">2015-07-05</li>
-                       <li class="name4">3</li>
-                       <li class="name4 red">￥360.00</li>
-                       <li class="name5 blue">
-                           <a href="">订单详情</a>
-                           <a href="">反馈未出码</a>
-                       </li>
-                   </ul>
-               </div>
-               <div class="order clear">
-                   <ul class="items">
-                       <li class="name1">
-                         <span>
-                            <input type="checkbox">
-                            <a href="" class="singleId">3601912839</a>
-                         </span>
-                       </li>
-                       <li class="name2">2015-07-04 22:12:08</li>
-                       <li class="name3 blue">曲江海洋极地公园成人票【预订2小时后刷二维码入园，一个手机号最多预定3张】</li>
-                       <li class="name2 green">订单完成</li>
-                       <li class="name1">
-                           <em>刘红</em>
-                           <br>
-                           <em>18292864770</em>
-                       </li>
-                       <li class="name2">2015-07-05</li>
-                       <li class="name4">3</li>
-                       <li class="name4 red">￥360.00</li>
-                       <li class="name5 blue">
-                           <a href="">订单详情</a>
-                           <a href="">反馈未出码</a>
-                       </li>
-                   </ul>
-               </div>
+               -->
            </div>
-
        </div>
        <div class="clear"></div>
        <div  class="link_page">
@@ -229,4 +181,6 @@
        </footer>
    </div>
 </body>
+<script type="text/javascript"  src="js/getOrderInfo.js"></script>
+
 </html>
