--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="keywords" content="">
     <meta http-equiv="description" content="">
     <link rel="stylesheet"	 href="css/base.css" />
-    <script type="text/javascript"  src="js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript"  src="js/jquery.js"></script>
     <script src="js/Load.js"></script>
     <script src="js/cookie.js"></script>
   </head>
