--- a/scene_detail.html
+++ b/scene_detail.html
@@ -23,11 +23,13 @@
         <div  class="box_shop">
         </div>
         <div  class="box_user box_shop_user">
+            <!--
             <div>
                 <a  href="login.html">登录</a>
                 <span>|</span>
                 <a  href="register.html">注册</a>
             </div>
+            -->
         </div>
     </div>
 </header>
@@ -133,4 +135,5 @@
   </div>
   <!--end footer-->
 </body>
+<script src="js/base.js"></script>
 </html>
