--- a/order.html
+++ b/order.html
@@ -120,46 +120,19 @@
                        <li class="name5">操作</li>
                    </ul>
                </div>
-               
-               <!--
-               <div class="order clear">
-                   <ul class="items">
-                       <li class="name1">
-                         <span>
-                            <input type="checkbox">
-                            <a href="" class="singleId">3601912839</a>
-                         </span>
-                       </li>
-                       <li class="name2">2015-07-04 22:12:08</li>
-                       <li class="name3 blue">曲江海洋极地公园成人票【预订2小时后刷二维码入园，一个手机号最多预定3张】</li>
-                       <li class="name2 green">订单完成</li>
-                       <li class="name1">
-                           <em>刘红</em>
-                           <br>
-                           <em>18200000000</em>
-                       </li>
-                       <li class="name2">2015-07-05</li>
-                       <li class="name4">3</li>
-                       <li class="name4 red">￥360.00</li>
-                       <li class="name5 blue">
-                           <a href="">订单详情</a>
-                           <a href="">反馈未出码</a>
-                       </li>
-                   </ul>
-               </div>
-               -->
+
            </div>
            <div class="calcleMenu">
                <div class="ticketMsg2"><span>电子门票</span><input type="text" class="basicMsg electName" value=""></div>
-               <div class="ticketMsg2"><span>修改票数</span><input type="text" class="basicMsg cancleNum" value=""></div>
-               <div class="ticketMsg2"><span>重新发码</span>
-                   <label>是</label>
-                   <input type="radio" class="againID cancleNum" value="" name="againID">
-                   <label>否</label>
-                   <input type="radio" class="againID cancleNum" value="" name="againID" checked="checked" >
-               </div>
-               <button value="" class="orderSure2">确定</button>
+               <div class="ticketMsg2"><span>票数</span><input type="text" class="basicMsg cancleNum" value=""></div>
+               <button value="" class="orderSure2">退票</button>
+               <button value="" class="orderAdd2">新增</button>
                <button value="" class="orderCancle2">取消</button>
+           </div>
+           <div class="calcleMenu2">
+               <div class="ticketMsg2"><span>电话号码</span><input type="text" class="basicMsg phoneNum" value=""></div>
+               <button value="" class="orderSure3">确定</button>
+               <button value="" class="orderCancle3">取消</button>
            </div>
        </div>
        <div class="clear"></div>
