--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="keywords" content="">
     <meta http-equiv="description" content="">
     <link rel="stylesheet" type="text/css" href="css/base.css">
-    <script type="text/javascript"  src="js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript"  src="js/base.js"></script>
+    <script type="text/javascript"  src="js/jquery.js"></script>
+    <script type="text/javascript"  src="js/cookie.js"></script>
   </head>
   <body>
     <div  id="wrap">
@@ -27,11 +27,6 @@
                    <!-- /justIT/jsp/user/cart.jsp -->
                </div>
                <div  class="box_user box_shop_user">
-                   <div>
-                       <a  href="login.html">登录</a>
-                       <span>|</span>
-                       <a  href="register.html">注册</a>
-                   </div>
                </div>
            </div>
        </header>
@@ -105,65 +100,65 @@
                        <img src="images/list01.jpg">
                        <a href="scene_detail.html">上海迪士尼乐园</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">开启童趣之旅</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥366</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list02.jpg">
+                       <a href="">塔斯特景区</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">不一样的feelings</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥606</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list03.jpg">
+                       <a href="">上海欢乐谷</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">娱乐游玩的场地</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥328</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list04.jpg">
+                       <a href="">苏州乐园</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">夜晚的苏州乐园，坐在摩天轮上俯视金鸡湖，看见点点星光和远处的的东方之门，别有一番心绪！</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥199</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list05.jpg">
+                       <a href="">丽江</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">人生必经的邂逅</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥588</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list06.jpg">
+                       <a href="">东方明珠</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">夜景美得让人陶醉</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥316</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list07.jpg">
+                       <a href="">发现王国</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">日不落王国</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥249</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list08.jpg">
+                       <a href="">哈尔滨森林动物园</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">野生动物园，在深山里面，感觉动物贴近自然会更好些</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥128</span>
                    </li>
                </ul>
            </div>
@@ -174,72 +169,38 @@
                </div>
                <ul class="display_scenes clear">
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list09.jpg">
+                       <a href="">重庆海底世界</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">如果我们生活在海底，如果鸟可以在海洋中飞翔，如果树可以在海底生长，那该多好。</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥366</span>
                    </li>
                    <li>
                        <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <a href="">重庆植物园</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">植物园的游荡</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥299</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list11.jpg">
+                       <a href="">千岛湖热气球</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">热气球，一个让人感觉趣味、轻松又悠闲的活动</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥188</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list12.jpg">
+                       <a href="">杭州野生动物世界</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">走进野生动物的情感世界</span>
                        <br>
-                       <span class="red">￥666</span>
-                   </li>
-                   <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
-                       <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
-                       <br>
-                       <span class="red">￥666</span>
-                   </li>
-                   <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
-                       <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
-                       <br>
-                       <span class="red">￥666</span>
-                   </li>
-                   <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
-                       <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
-                       <br>
-                       <span class="red">￥666</span>
-                   </li>
-                   <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
-                       <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
-                       <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥528</span>
                    </li>
                </ul>
-
-
            </div>
            <div  class="display_bg1">
                <div class="displayName">
@@ -248,72 +209,38 @@
                </div>
                <ul class="display_scenes clear">
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list13.jpg">
+                       <a href="">南京阅江楼</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">阅江楼位于南京市鼓楼区下关，屹立在扬子江畔，饮霞吞雾，是中国十大文化名楼、江南四大名楼之一，也是南京阅江楼景区的主景点、国家AAAA级旅游景区、新金陵四十八景之一。</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥169</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list14.jpg">
+                       <a href="">南京海底世界</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">在蔚蓝的大海中，有一种妙不可言的生物。</span>
                        <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥266</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list15.jpg">
+                       <a href="">汤山一号温泉</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">舒爽</span>
                        <br>
-                       <span class="red">￥666</span>
-                   </li>
-                   <li class="no-right-border">
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
-                       <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
-                       <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥328</span>
                    </li>
                    <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
+                       <img src="images/list16.jpg">
+                       <a href="">银杏湖乐园</a>
                        <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
+                       <span class="brief_intr">嗨帆的感觉</span>
                        <br>
-                       <span class="red">￥666</span>
-                   </li>
-                   <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
-                       <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
-                       <br>
-                       <span class="red">￥666</span>
-                   </li>
-                   <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
-                       <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
-                       <br>
-                       <span class="red">￥666</span>
-                   </li>
-                   <li>
-                       <img src="images/list01.jpg">
-                       <a href="">上海迪士尼乐园</a>
-                       <br>
-                       <span class="brief_intr">上海迪士尼乐园相关介绍</span>
-                       <br>
-                       <span class="red">￥666</span>
+                       <span class="red">￥99</span>
                    </li>
                </ul>
-
-
            </div>
        </div>
        <!--end containter-->
@@ -346,4 +273,5 @@
     </div>
     <!--end wrap-->
   </body>
+  <script type="text/javascript"  src="js/base.js"></script>
  </html>
